--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,17 +24,13 @@ jobs:
         version: v1.29
 
   test:
-    strategy:
-      matrix:
-        go-version: [1.15.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
     - name: Install Go
       if: success()
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: 1.15.7
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Run tests
@@ -47,7 +43,7 @@ jobs:
       if: success()
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15.x
+        go-version: 1.15.7
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Calc coverage
