--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,3 +56,5 @@ jobs:
       with:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: coverage.lcov
+    - name: Check coverage percent
+      run: ./coverage.sh
