--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,8 @@ jobs:
     - name: Calc coverage
       run: |
         go test -v -covermode=count -coverprofile=coverage.out
+    - name: copy coverage
+      run: cp coverage.out coverage-check.out
     - name: Convert coverage.out to coverage.lcov
       uses: jandelgado/gcov2lcov-action@v1.0.6
     - name: Coveralls
