--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,6 @@ jobs:
       uses: coverallsapp/github-action@v1.1.2
       with:
           github-token: ${{ secrets.github_token }}
-          path-to-lcov: coverage.out
+          path-to-lcov: coverage.lcov
     - name: Check coverage percent
       run: ./coverage.sh
