--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-
+name: Run Tests
 on:
   push:
     branches:
@@ -6,14 +6,13 @@ on:
   pull_request:
     branches:
       - master
-
-name: run tests
-on:
-  workflow_dispatch:
+workflow_dispatch:
   inputs:
     git-ref:
       description: Git Ref (Optional)    
       required: false
+
+name: run tests
 jobs:
   lint:
     runs-on: ubuntu-latest
