--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,7 +16,7 @@ archives:
 builds:
   - <<: &build_defaults
       binary: "autocomplete-{{.Os}}-{{.Arch}}"
-      main: ./autocomplete
+      main: ./cmd/autocomplete
       env:
         - CGO_ENABLED=0
     id: linux-amd64
